5. Removed excess code in Get-UserWithThumbnail that was duplicating/triplicating tasks.
6. Added check on Open-HyperVmgmt to see if the Hyper-V tools are installed.
7. Moved some functions from WSTools.psm1 to WS_PowerShell.psm1 and rearranged some functions.
8. Added Install-GitSCM.

######################
#                    #
#      2022.08       #
#                    #
######################
New features and other changes:
1. Added Uninstall-AdobeLiveCycleFormsDesigner.
2. Added Uninstall-Axway.
3. Added an additional uninstall method to Uninstall-TransVerse.
4. Fixed an issue in Save-UpdateHistory where it was resulting in no data being exported.

######################
#                    #
#      2022.07       #
#                    #
######################
New features and other changes:
1. Added NetDiagram and RackEl to config items.
2. Added functions Open-NetworkDiagram and Open-RackElevation.
3. Added function Repair-DuplicateSusClientID.
4. Added function Copy-UpdateHistory.
5. Added remote functionality to Save-UpdateHistory.

######################
#                    #
#      2022.06       #
#                    #
######################
New features and other changes:
1. Added function Get-HWPerformanceScore.
2. Added function Test-NetworkSpeed and config file items NSLocal, NSRemote, NSFileSize.
3. Added Juneteenth to Federal Holiday list.
4. Added function Update-ModulesFromLocalRepo and LocalPSRepo config item.

######################
#                    #
#      2022.04       #
#                    #
######################
New features and other changes:
1. Added function Uninstall-DamewareMiniRemoteControl.
2. Removed Transverse from InstallRemote.ps1.
3. Removed function Copy-Transverse and the Transverse config item.
4. Updated the WMI query used to find the Transverse program in Uninstall-TransVerse.

######################
#                    #
#      2022.03       #
#                    #
######################