@@ -16,6 +16,7 @@ New features and other changes:
 6. Added check on Open-HyperVmgmt to see if the Hyper-V tools are installed.
 7. Moved some functions from WSTools.psm1 to WS_PowerShell.psm1 and rearranged some functions.
 8. Added Install-GitSCM.
+9. Added EdgeVanilla config item, added Vanilla switch to Copy-Edge
 
 ######################
 #                    #
